cmake_minimum_required(VERSION 3.1)
project(libalconcurrent CXX)

file(GLOB SOURCES src/*.cpp )
add_library(alconcurrent ${SOURCES} )


target_include_directories(alconcurrent  PUBLIC inc  )
# target_compile_definitions(alconcurrent PRIVATE ALCONCURRENT_CONF_LOGGER_INTERNAL_ENABLE_OUTPUT_INFO)
# target_compile_definitions(alconcurrent PRIVATE ALCONCURRENT_CONF_LOGGER_INTERNAL_ENABLE_OUTPUT_DEBUG)
# target_compile_definitions(alconcurrent PRIVATE ALCONCURRENT_CONF_LOGGER_INTERNAL_ENABLE_OUTPUT_TEST)
target_compile_definitions(alconcurrent PRIVATE ALCONCURRENT_CONF_LOGGER_INTERNAL_ENABLE_OUTPUT_DUMP)
# target_compile_definitions(alconcurrent PRIVATE ALCONCURRENT_CONF_SELECT_SHARED_CHUNK_LIST)
# target_compile_definitions(alconcurrent PRIVATE ALCONCURRENT_CONF_NOT_USE_LOCK_FREE_MEM_ALLOC)
# target_compile_definitions(alconcurrent PRIVATE ALCONCURRENT_CONF_ENABLE_DETAIL_STATISTICS_MESUREMENT)
# target_compile_definitions(alconcurrent PRIVATE ALCONCURRENT_CONF_USE_MALLOC_ALLWAYS_FOR_DEBUG_WITH_SANITIZER)
